--- a/pallets/pallet-tasking/Cargo.toml
+++ b/pallets/pallet-tasking/Cargo.toml
@@ -22,6 +22,8 @@ version = '2.0.0'
 frame-support = { default-features = false, version = '3.0.0' }
 frame-system = { default-features = false, version = '3.0.0' }
 sp-std = { default-features = false, version = '3.0.0' }
+pallet-balances = {default-features = false, version = '3.0.0'}
+pallet-staking = {default-features = false, version = '3.0.0'}
 
 [dev-dependencies]
 serde = { version = "1.0.119" }
@@ -36,4 +38,6 @@ std = [
     'frame-support/std',
     'frame-system/std',
     'sp-std/std',
+    'pallet-balances/std',
+    'pallet-staking/std',
 ]
