--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -26,6 +26,7 @@ serde = { features = ['derive'], optional = true, version = '1.0.119' }
 
 # local dependencies
 pallet-tasking = { path = '../pallets/pallet-tasking', default-features = false, version = '3.0.0' }
+pallet-tasking-runtime-api = { path = '../pallets/pallet-tasking/runtime-api', default-features = false, version = '3.0.0'}
 
 # Substrate dependencies
 frame-benchmarking = { default-features = false, optional = true, version = '3.0.0' }
@@ -78,7 +79,6 @@ std = [
     'pallet-grandpa/std',
     'pallet-randomness-collective-flip/std',
     'pallet-sudo/std',
-    'pallet-tasking/std',
     'pallet-timestamp/std',
     'pallet-transaction-payment/std',
     'pallet-transaction-payment-rpc-runtime-api/std',
@@ -93,4 +93,6 @@ std = [
     'sp-std/std',
     'sp-transaction-pool/std',
     'sp-version/std',
+    'pallet-tasking/std',
+    'pallet-tasking-runtime-api/std',
 ]
