--- a/runtime/api-runtime/Cargo.toml
+++ b/runtime/api-runtime/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
+authors = ['']
 edition = '2018'
 homepage = 'https://substrate.dev'
 license = 'Unlicense'
@@ -25,8 +25,8 @@ hex-literal = { optional = true, version = '0.3.1' }
 serde = { features = ['derive'], optional = true, version = '1.0.119' }
 
 # local dependencies
-pallet-tasking = { path = '../pallets/pallet-tasking', default-features = false, version = '3.0.0' }
-pallet-tasking-runtime-api = { path = '../pallets/pallet-tasking/runtime-api', default-features = false, version = '3.0.0'}
+pallet-tasking = { path = '../../pallets/pallet-tasking', default-features = false, version = '3.0.0' }
+pallet-tasking-runtime-api = { path = '../../pallets/pallet-tasking/runtime-api', default-features = false, version = '3.0.0'}
 
 # Substrate dependencies
 frame-benchmarking = { default-features = false, optional = true, version = '3.0.0' }
